--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 
-    <div class="parent">
+    
+<div class="parent"> <!--separacion con div, agregando parent-->
 
         <header>
 
