--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header>
 
             <div class="container">
-                <h1>DULCE SABOR</h1>
-                <input type="checkbox" id="menu_barra">
+                <h1>DULCE SABOR</h1> <!--agregando titulo en etiqueta h1-->
+                <input type="checkbox" id="menu_barra"> <!--agregando barra de menu en etiqueta input-->
                 <label class="icon-menu" for="menu_barra"></label>
                 <nav class="menu">
                     <a href="" class="icon-enter">inicio</a>
