--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <h1>DULCE SABOR</h1> <!--agregando titulo en etiqueta h1-->
                 <input type="checkbox" id="menu_barra"> <!--agregando barra de menu en etiqueta input-->
-                <label class="icon-menu" for="menu_barra"></label>
+                <label class="icon-menu" for="menu_barra"></label> <!--agregando icono de menu en etiqueta label-->
                 <nav class="menu">
                     <a href="" class="icon-enter">inicio</a>
                     <a href="" class="icon-list">recetas</a>
