agregando barra de menu

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <h1>DULCE SABOR</h1> <!--agregando titulo en etiqueta h1-->
                 <input type="checkbox" id="menu_barra"> <!--agregando barra de menu en etiqueta input-->
                 <label class="icon-menu" for="menu_barra"></label> <!--agregando icono de menu en etiqueta label-->
-                <nav class="menu">
-                    <a href="" class="icon-enter">inicio</a>
+                <nav class="menu"><!--barra de menu en la etiqueta nav-->
+                    <a href="" class="icon-enter">inicio</a> 
                     <a href="" class="icon-list">recetas</a>
                     <a href="" class="icon-library">cursos</a>
                     <a href="" class="icon-tag">compra y venta</a>
