--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="checkbox" id="menu_barra"> <!--agregando barra de menu en etiqueta input-->
                 <label class="icon-menu" for="menu_barra"></label> <!--agregando icono de menu en etiqueta label-->
                 <nav class="menu"><!--barra de menu en la etiqueta nav-->
-                    <a href="" class="icon-enter">inicio</a> 
+                    <a href="" class="icon-enter">inicio</a> <!-- agregando inicio en barra de menu en etiqueta a-->
                     <a href="" class="icon-list">recetas</a>
                     <a href="" class="icon-library">cursos</a>
                     <a href="" class="icon-tag">compra y venta</a>
