--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <nav class="menu"><!--barra de menu en la etiqueta nav-->
                     <a href="" class="icon-enter">inicio</a> <!-- agregando inicio en barra de menu en etiqueta a-->
                     <a href="" class="icon-list">recetas</a><!-- agregando recetas en barra de menu en etiqueta a-->
-                    <a href="" class="icon-library">cursos</a>
+                    <a href="" class="icon-library">cursos</a><!-- agregando cursos en barra de menu en etiqueta a-->
                     <a href="" class="icon-tag">compra y venta</a>
                     <a href="" class="icon-like">nosotros</a>
                 </nav>
