--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a href="" class="icon-enter">inicio</a> <!-- agregando inicio en barra de menu en etiqueta a-->
                     <a href="" class="icon-list">recetas</a><!-- agregando recetas en barra de menu en etiqueta a-->
                     <a href="" class="icon-library">cursos</a><!-- agregando cursos en barra de menu en etiqueta a-->
-                    <a href="" class="icon-tag">compra y venta</a>
+                    <a href="" class="icon-tag">compra y venta</a> <!-- agregando compra y venta en barra de menu en etiqueta a-->
                     <a href="" class="icon-like">nosotros</a>
                 </nav>
             </div>
