--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <section id="banner">
 
-            <img src="IMAGENES/logo2.png" alt="banner principal">
+            <img src="IMAGENES/logo2.png" alt="banner principal"> <!--agregando imagen-->
             <!--<div class="header__register">
                 <input type="button" value="REGISTRARSE" class="btn__header-register">
             </div>-->
