--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="parent2">    
 
-        <div class="footer">
+        <div class="footer"> <!--agregando footer en etiqueta div -->
 
             <div class="container__text">
                 <div class="text__father">
