--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="text__front">
                             <div class="bg"></div>
                             <div class="body__text_front">
-                                <h3>!SIGUENOS EN NUESTRAS REDES SOCIALES¡</h3>
+                                <h3>!SIGUENOS EN NUESTRAS REDES SOCIALES¡</h3> <!-- definiendo subtitulo en h3-->
                             </div>
                         </div>
                         <div class="text__back">
