--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <h3>!SIGUENOS EN NUESTRAS REDES SOCIALES¡</h3> <!-- definiendo subtitulo en h3-->
                             </div>
                         </div>
-                        <div class="text__back">
+                        <div class="text__back"> <!--agregando texto en negro-->
                             <div class="body__text_back"> 
                                 <div class="contenedor">
                                     <p class="copy">
