--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div class="body__text_back"> 
                                 <div class="contenedor">
                                     <p class="copy">
-                                        DULCE SABOR &copy; 2022
+                                        DULCE SABOR &copy; 2022 <!--definiendo un parrafo-->
                                     </p>
                                     <div class="social">
                                         <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a>
