--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                                     <p class="copy">
                                         DULCE SABOR &copy; 2022 <!--definiendo un parrafo-->
                                     </p>
-                                    <div class="social">
-                                        <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a>
+                                    <div class="social"> <!--agregando redes sociales de la pagina-->
+                                        <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a> 
                                         <a class="icon-instagram" style="color: violet;" href="">INSTAGRAM</a>
                                         <a class="icon-twitter" style="color: darkslateblue;" href="">TWITTER</a>
                                     </div>
