definiendo red social

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         DULCE SABOR &copy; 2022 <!--definiendo un parrafo-->
                                     </p>
                                     <div class="social"> <!--agregando redes sociales de la pagina-->
-                                        <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a> 
+                                        <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a> <!--definiendo facebook como red social-->
                                         <a class="icon-instagram" style="color: violet;" href="">INSTAGRAM</a>
                                         <a class="icon-twitter" style="color: darkslateblue;" href="">TWITTER</a>
                                     </div>
