--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     </p>
                                     <div class="social"> <!--agregando redes sociales de la pagina-->
                                         <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a> <!--definiendo facebook como red social-->
-                                        <a class="icon-instagram" style="color: violet;" href="">INSTAGRAM</a>
+                                        <a class="icon-instagram" style="color: violet;" href="">INSTAGRAM</a><!--definiendo instagram como red social-->
                                         <a class="icon-twitter" style="color: darkslateblue;" href="">TWITTER</a>
                                     </div>
                                 </div>
