definiendo red social

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <div class="social"> <!--agregando redes sociales de la pagina-->
                                         <a class="icon-facebook" style="color: blue;" href="">FACEBOOK</a> <!--definiendo facebook como red social-->
                                         <a class="icon-instagram" style="color: violet;" href="">INSTAGRAM</a><!--definiendo instagram como red social-->
-                                        <a class="icon-twitter" style="color: darkslateblue;" href="">TWITTER</a>
+                                        <a class="icon-twitter" style="color: darkslateblue;" href="">TWITTER</a><!--definiendo twitter como red social-->
                                     </div>
                                 </div>
                                 <!-- <input type="button" value="leer más"> -->
