--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         
             <div class="container__text">
                 <div class="text__father">
-                    <div class="text">
+                    <div class="text"> <!--agregando texto-->
                         <div class="text__front">
                             <div class="bg"></div>
                             <div class="body__text_front">
