agregando subtitulo en h3

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="text__front">
                             <div class="bg"></div>
                             <div class="body__text_front">
-                                <h3>SOPORTE TECNICO</h3>
+                                <h3>SOPORTE TECNICO</h3> <!--agregando subtitulo en h3-->
                             </div>
                         </div>
                         <div class="text__back">
