agregando texto en negro

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <h3>SOPORTE TECNICO</h3> <!--agregando subtitulo en h3-->
                             </div>
                         </div>
-                        <div class="text__back">
+                        <div class="text__back"> <!--agregando texto en negro-->
                             <div class="body__text_back1"> 
                                 <div class="contenedor">
                                     <p class="copy">
