--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         </div>
                         <div class="text__back"> <!--agregando texto en negro-->
                             <div class="body__text_back1"> 
-                                <div class="contenedor">
-                                    <p class="copy">
+                                <div class="contenedor"> 
+                                    <p class="copy"> <!--insertar parrafo-->
                                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor obcaecati nemo quia voluptates, unde saepe rerum officia. Voluptates laborum
                                     </p>
                                 </div>
