--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=div, initial-scale=1.0">
     <title>PASTELERIA;DULCE SABOR</title> <!-- agregando titulo a la pagina pagina-->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css"> <!--agregando link de codigo css-->
     <link rel="stylesheet" href="CSS/menu.css">
     <link rel="stylesheet" href="CSS/banner.css">
     <link rel="stylesheet" href="CSS/fontello.css">
