inicio del div parent

--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 </head>
 <body>
 
+    <div class="parent"> <!--esta es l caja que almacena todo el contenido-->
+
+    </div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
