inicio del contenedor en el encabeado

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 
     <div class="parent"> <!--esta es l caja que almacena todo el contenido-->
 
+
+        <header>
+            
+            <div class="container">
+                    
+            </div>
+        </header>
     </div>
 </body>
 </html>
