--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             
             <div class="container">
                     <h1>DULCE SABOR</h1>
+                    <input type="checkbox" id="menu_barra">
             </div>
         </header>
     </div>
