--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="container">
                     <h1>DULCE SABOR</h1>
                     <input type="checkbox" id="menu_barra">
+                    <label for="menu_barra" class="icon-menu"></label>
             </div>
         </header>
     </div>
