--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <h1>DULCE SABOR</h1>
                     <input type="checkbox" id="menu_barra">
                     <label for="menu_barra" class="icon-menu"></label>
+                    <nav class="menu">
+                        
+                    </nav>
             </div>
         </header>
     </div>
