Enlaces del navegador

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                     <input type="checkbox" id="menu_barra">
                     <label for="menu_barra" class="icon-menu"></label>
                     <nav class="menu">
-                        
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
                     </nav>
             </div>
         </header>
