Seccion del banner

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
                         <a href=""></a>
                     </nav>
             </div>
+
         </header>
+
+        <section id="banner">
+            
+        </section>
     </div>
 </body>
 </html>
