Imagen del banner

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
 
         <section id="banner">
-            
+            <img src="IMAGENES/logo2.png" alt="banner principal">
         </section>
     </div>
 </body>
