--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <section id="banner">
             <img src="IMAGENES/logo2.png" alt="banner principal">
         </section>
+
+        <main>
+            
+        </main>
     </div>
 </body>
 </html>
