--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </section>
 
         <main>
-            
+            <div class="cover">
+                
+            </div>
         </main>
     </div>
 </body>
