Texto informativo del cover

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 
         <main>
             <div class="cover">
-                
+                <div class="text__information_cover">
+
+                </div>
             </div>
         </main>
     </div>
