Contenedor del pie de pagina

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 </div>
             </div>
         </main>
+
+        <div class="parent2">
+            
+        </div>
     </div>
 </body>
 </html>
