--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         </main>
 
         <div class="parent2">
-            
+            <div class="footer">
+                
+            </div>
         </div>
     </div>
 </body>
