--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 
         <div class="parent2">
             <div class="footer">
-                
+                <div class="text_father">
+                    
+                </div>
             </div>
         </div>
     </div>
