--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <div class="parent2">
             <div class="footer">
                 <div class="text_father">
-                        
+                    <div class="text">
+                        <div class="text_fron">
+                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
