Fondo del texto frontal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <div class="text_father">
                     <div class="text">
                         <div class="text_fron">
-                            
+                            <div class="bg">
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
