Cuerpo del texto frontal

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 <div class="text_father">
                     <div class="text">
                         <div class="text_fron">
-                            <div class="bg">
+                            <div class="bg"></div>
+                            <div class="body__text_front">
                                 
                             </div>
                         </div>
