Contenido del texto frontal

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="text_fron">
                             <div class="bg"></div>
                             <div class="body__text_front">
-                                
+                                <h3>¡SIGUENOS EN NUESTRAS REDES SOCIALES!</h3>
                             </div>
                         </div>
                     </div>
