--- a/index.html
+++ b/index.html
@@ -44,12 +44,16 @@
             <div class="footer">
                 <div class="text_father">
                     <div class="text">
-                        <div class="text_fron">
+                        <div class="text__front">
                             <div class="bg"></div>
                             <div class="body__text_front">
                                 <h3>¡SIGUENOS EN NUESTRAS REDES SOCIALES!</h3>
                             </div>
                         </div>
+
+                        <div class="text__back">
+                            
+                        </div>                        
                     </div>
                 </div>
             </div>
