Cuerpo del texto  back

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                         </div>
 
                         <div class="text__back">
-                            
+                            <div class="body__text_back">
+                                
+                            </div>
                         </div>                        
                     </div>
                 </div>
