--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
                         <div class="text__back">
                             <div class="body__text_back">
-                                
+                                <div class="contenedor">
+                                    
+                                </div>
                             </div>
                         </div>                        
                     </div>
