--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>prueba</title>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/menu.css">
+    <link rel="stylesheet" href="CSS/banner.css">
 </head>
 <body>
 
