--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/menu.css">
     <link rel="stylesheet" href="CSS/banner.css">
+    <link rel="stylesheet" href="CSS/fontello.css">
 </head>
 <body>
 
