--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                         <div class="text__back">
                             <div class="body__text_back">
                                 <div class="contenedor">
-                                    
+                                    <p class="copy">
+                                        
+                                    </p>
                                 </div>
                             </div>
                         </div>                        
