agregando contenido al copyright

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <div class="body__text_back">
                                 <div class="contenedor">
                                     <p class="copy">
-                                        
+                                        DULCE SABOR &copy; 2022
                                     </p>
                                 </div>
                             </div>
