agregando etiqueta social

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                                     <p class="copy">
                                         DULCE SABOR &copy; 2022
                                     </p>
+                                    <div class="social"> <!--redes sociales-->
+
+                                    </div>
                                 </div>
                             </div>
                         </div>                        
