agregando las redes sociales

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                                         DULCE SABOR &copy; 2022
                                     </p>
                                     <div class="social"> <!--redes sociales-->
-
+                                        <a class="icon-facebook" href="">FACEBOOK</a>
+                                        <a class="icon-twitter" href="">TWITTER</a>
+                                        <a class="icon-instagram" href="">INSTAGRAM/a>
                                     </div>
                                 </div>
                             </div>
