agregando texto contenedor

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="parent2">
             <div class="footer">
+                <div class="container-text">
                 <div class="text_father">
                     <div class="text">
                         <div class="text__front">
@@ -71,7 +72,9 @@
                         </div>                        
                     </div>
                 </div>
+                </div>
             </div>
+
         </div>
     </div>
 </body>
