segundo texto contenedor

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 </div>
                 </div>
             </div>
-
+            <div class="container-text">
+                
+            </div>
         </div>
     </div>
 </body>
