segundo texto padre

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 </div>
             </div>
             <div class="container-text">
-                
+                <div class="text_father">
+                    
+                </div>
             </div>
         </div>
     </div>
