segundo texto del pie de pagina

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             </div>
             <div class="container-text">
                 <div class="text_father">
-                    
+                    <div class="text">
+                        
+                    </div>
                 </div>
             </div>
         </div>
