segundo texto frontal del pie de pagina

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
             <div class="container-text">
                 <div class="text_father">
                     <div class="text">
-                        
+                        <div class="text__front">
+                            
+                        </div>
                     </div>
                 </div>
             </div>
