segunda etiqueta class bg al pie de pagina

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="text_father">
                     <div class="text">
                         <div class="text__front">
-                            
+                            <div class="bg"></div>
                         </div>
                     </div>
                 </div>
