segundo cuerpo del texto frontal del pie de pagina

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                     <div class="text">
                         <div class="text__front">
                             <div class="bg"></div>
+                            <div class="body__text_front">
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
