soporte tecnico de la pagina

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="text__front">
                             <div class="bg"></div>
                             <div class="body__text_front">
-                                
+                                <h3>SOPORTE TECNICO</h3><!--soporte tecnico-->
                             </div>
                         </div>
                     </div>
