segundo texto anterior del pie de pagina

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                                 <h3>SOPORTE TECNICO</h3><!--soporte tecnico-->
                             </div>
                         </div>
+                        <div class="text__back">
+                            
+                        </div>
                     </div>
                 </div>
             </div>
