agregando contenedor del soporte tecnico

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                             </div>
                         </div>
                         <div class="text__back">
-                            
+                            <div class="contenedor">
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
