--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                         </div>
                         <div class="text__back">
                             <div class="contenedor">
-                                
+                                <p class="copy">
+                                    
+                                </p>
                             </div>
                         </div>
                     </div>
