--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     <div class="social"> <!--redes sociales-->
                                         <a class="icon-facebook" href="">FACEBOOK</a>
                                         <a class="icon-twitter" href="">TWITTER</a>
-                                        <a class="icon-instagram" href="">INSTAGRAM/a>
+                                        <a class="icon-instagram" href="">INSTAGRAM</a>
                                     </div>
                                 </div>
                             </div>
@@ -86,7 +86,7 @@
                         <div class="text__back">
                             <div class="contenedor">
                                 <p class="copy">
-                                    
+                                    DULCE SABOR &copy; 2022
                                 </p>
                             </div>
                         </div>
