--- a/index.html
+++ b/index.html
@@ -4,96 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prueba</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="CSS/animation.css">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/menu.css">
-    <link rel="stylesheet" href="CSS/banner.css">
-    <link rel="stylesheet" href="CSS/fontello.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
 </head>
 <body>
-
-    <div class="parent"> <!--esta es l caja que almacena todo el contenido-->
-
-
-        <header>
-            
-            <div class="container">
-                    <h1>DULCE SABOR</h1>
-                    <input type="checkbox" id="menu_barra">
-                    <label for="menu_barra" class="icon-menu"></label>
-                    <nav class="menu">
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                    </nav>
+    <div id="contenedor">
+        <div id="encabezado">
+            <h1>DULCE SABOR</h1> <!--Nombre de la empresa-->
+            <div id="menu">
+                <nav>
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li> <!--retorno al index principal-->
+                        <li><a href="Carrito.html">Carrito</a></li> <!--carrito de compras-->
+                        <li><a href="Nosotros.html">Nosotros</a></li> <!--informacion del equipo-->
+                    </ul>
+                    <section></section>
+                </nav>
             </div>
 
-        </header>
+        </div>
+        <div id="cuerpo">
+            <div class="slide-container swiper">
+                <div class="slide-container">
+                    <div class="card-wrapper swiper-wrapper">
+                        <div class="card swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
 
-        <section id="banner">
-            <img src="IMAGENES/logo2.png" alt="banner principal">
-        </section>
-
-        <main>
-            <div class="cover">
-                <div class="text__information_cover">
-
-                </div>
-            </div>
-        </main>
-
-        <div class="parent2">
-            <div class="footer">
-                <div class="container-text">
-                <div class="text_father">
-                    <div class="text">
-                        <div class="text__front">
-                            <div class="bg"></div>
-                            <div class="body__text_front">
-                                <h3>¡SIGUENOS EN NUESTRAS REDES SOCIALES!</h3>
-                            </div>
-                        </div>
-
-                        <div class="text__back">
-                            <div class="body__text_back">
-                                <div class="contenedor">
-                                    <p class="copy">
-                                        DULCE SABOR &copy; 2022
-                                    </p>
-                                    <div class="social"> <!--redes sociales-->
-                                        <a class="icon-facebook" href="">FACEBOOK</a>
-                                        <a class="icon-twitter" href="">TWITTER</a>
-                                        <a class="icon-instagram" href="">INSTAGRAM</a>
-                                    </div>
+                                <div class="card-image">
+                                    <img src="IMAGENES/torta-16años.jpg" alt="torta de cumplaños 16" class="card-img">
                                 </div>
                             </div>
-                        </div>                        
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="container-text">
-                <div class="text_father">
-                    <div class="text">
-                        <div class="text__front">
-                            <div class="bg"></div>
-                            <div class="body__text_front">
-                                <h3>SOPORTE TECNICO</h3><!--soporte tecnico-->
-                            </div>
-                        </div>
-                        <div class="text__back">
-                            <div class="contenedor">
-                                <p class="copy">
-                                    DULCE SABOR &copy; 2022
-                                </p>
+
+                            <div class="card-content">
+                                <h2 class="name">Torta de cumpleaños de 16</h2>
+                                <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, libero!</p>
+
+                                <button class="button"><a href="#">¡Mas Info!</a></button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div id="pie">
+
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script> <!--para las cajas del cuerpo-->
+    <script src="https://kit.fontawesome.com/c8d911f857.js" crossorigin="anonymous"></script>
+    <script src="JS/script.js"></script> <!--Agregando el script principal-->
 </body>
 </html>
