--- a/index.html
+++ b/index.html
@@ -4,98 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prueba</title>
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/menu.css">
-    <link rel="stylesheet" href="CSS/banner.css">
-    <link rel="stylesheet" href="CSS/fontello.css">
+    <title>Document</title>
 </head>
 <body>
-
-    <div class="parent"> <!--esta es l caja que almacena todo el contenido-->
-
-
-        <header>
-            
-            <div class="container">
-                    <h1>DULCE SABOR</h1>
-                    <input type="checkbox" id="menu_barra">
-                    <label for="menu_barra" class="icon-menu"></label>
-                    <nav class="menu">
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                    </nav>
-            </div>
-
-        </header>
-
-        <section id="banner">
-            <img src="IMAGENES/logo2.png" alt="banner principal">
-        </section>
-
-        <main>
-            <div class="cover">
-                <div class="text__information_cover">
-
-                </div>
-            </div>
-        </main>
-
-        <div class="parent2">
-            <div class="footer">
-                <div class="container-text">
-                <div class="text_father">
-                    <div class="text">
-                        <div class="text__front">
-                            <div class="bg"></div>
-                            <div class="body__text_front">
-                                <h3>¡SIGUENOS EN NUESTRAS REDES SOCIALES!</h3>
-                            </div>
-                        </div>
-
-                        <div class="text__back">
-                            <div class="body__text_back">
-                                <div class="contenedor">
-                                    <p class="copy">
-                                        DULCE SABOR &copy; 2022
-                                    </p>
-                                    <div class="social"> <!--redes sociales-->
-                                        <a class="icon-facebook" href="">FACEBOOK</a>
-                                        <a class="icon-twitter" href="">TWITTER</a>
-                                        <a class="icon-instagram" href="">INSTAGRAM/a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>                        
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="container-text">
-                <div class="text_father">
-                    <div class="text">
-                        <div class="text__front">
-                            <div class="bg"></div>
-                            <div class="body__text_front">
-                                <h3>SOPORTE TECNICO</h3><!--soporte tecnico-->
-                            </div>
-                        </div>
-                        <div class="text__back">
-                            <div class="contenedor">
-                                <p class="copy">
-                                  <ul>
-                                    <li>jj</li>
-                                  </ul>  
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 </body>
 </html>
